name:                ocaml-export
version:             0.1.0.0
homepage:            https://github.com/plow-technologies/ocaml-export#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           BSD3
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OCaml.Common
                       OCaml.Export
                       OCaml.File
                       OCaml.Record
                       OCaml.Type
--                       OCaml.BuckleScript.Decode
                       OCaml.BuckleScript.Encode
                       
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , formatting
                     , mtl
                     , text
                     , time
                     , wl-pprint-text
  default-language:    Haskell2010
  ghc-options: -Wall
  
executable ocaml-export
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ocaml-export
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , ocaml-export
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plow-technologies/ocaml-export
