name:                reason-export
version:             0.1.0.0
homepage:            https://github.com/plow-technologies/reason-export#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           BSD3
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reason.Common
                       Reason.Export
                       Reason.Record
                       Reason.Type
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , formatting
                     , mtl
                     , text
                     , time
                     , wl-pprint-text
  default-language:    Haskell2010
  ghc-options: -Wall
  
executable reason-export
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reason-export
  default-language:    Haskell2010

test-suite reason-export-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reason-export
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plow-technologies/reason-export
